site: fix paths
oops

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fluffy!</title>
 
-    <link rel="stylesheet" href="/public/main.min.css">
+    <link rel="stylesheet" href="/main.min.css">
 </head>
 
 <body>
@@ -64,37 +64,37 @@
                 </p>
             </div>
 
-            <div class="whogallery-image" id="galimg1"><img src="/public/assets/20230331_0.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_1.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_2.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_3.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_4.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_0.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_1.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_2.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_3.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_4.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_0.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_1.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_2.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_3.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_4.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_0.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_1.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_2.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_3.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_4.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_0.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_1.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_2.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_3.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_4.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_0.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_1.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_2.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_3.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_4.png"></div>
-            <div class="whogallery-image"><img src="/public/assets/20230331_0.png"></div>
+            <div class="whogallery-image" id="galimg1"><img src="/assets/20230331_0.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_1.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_2.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_3.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_4.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_0.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_1.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_2.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_3.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_4.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_0.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_1.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_2.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_3.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_4.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_0.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_1.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_2.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_3.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_4.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_0.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_1.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_2.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_3.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_4.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_0.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_1.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_2.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_3.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_4.png"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_0.png"></div>
         </section>
 
         <!-- people fluffy has outlived -->
