--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Primary Meta Tags -->
     <title>fluffy!</title>
+    <meta name="title" content="fluffy!">
+    <meta name="description" content="the best goddamn dog out there.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://fluffy.joshwel.co/">
+    <meta property="og:title" content="fluffy!">
+    <meta property="og:description" content="the best goddamn dog out there.">
+    <meta property="og:image" content="/assets/social.webp">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://fluffy.joshwel.co/">
+    <meta property="twitter:title" content="fluffy!">
+    <meta property="twitter:description" content="the best goddamn dog out there.">
+    <meta property="twitter:image" content="/assets">
 
     <link rel="stylesheet" href="/main.min.css">
 </head>
@@ -64,37 +82,37 @@
                 </p>
             </div>
 
-            <div class="whogallery-image" id="galimg1"><img src="/assets/20230331_0.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_1.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_2.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_3.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_4.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_0.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_1.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_2.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_3.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_4.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_0.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_1.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_2.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_3.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_4.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_0.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_1.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_2.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_3.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_4.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_0.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_1.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_2.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_3.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_4.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_0.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_1.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_2.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_3.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_4.png"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_0.png"></div>
+            <div class="whogallery-image" id="galimg1"><img src="/assets/20230331_0.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_1.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_2.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_3.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_4.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_0.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_1.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_2.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_3.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_4.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_0.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_1.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_2.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_3.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_4.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_0.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_1.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_2.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_3.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_4.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_0.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_1.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_2.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_3.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_4.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_0.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_1.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_2.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_3.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_4.webp"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_0.webp"></div>
         </section>
 
         <!-- people fluffy has outlived -->
@@ -213,7 +231,7 @@
                         </span>
                         <span class="card-back">
                             <!-- TODO: make 1 free fluffy card (see beatani website) -->
-                            <img src="assets/freefluffer.png" class="w-full"
+                            <img src="assets/freefluffer.webp" class="w-full"
                                 alt="Poorly drawn ticket, written '1 Free Fluffy'." width="5%">
                         </span>
                     </p>
