site: revert to png for free ticket and social share

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://fluffy.joshwel.co/">
     <meta property="og:title" content="fluffy!">
     <meta property="og:description" content="the best goddamn dog out there.">
-    <meta property="og:image" content="/assets/social.webp">
+    <meta property="og:image" content="/assets/social.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -230,8 +230,7 @@
                             Interested?
                         </span>
                         <span class="card-back">
-                            <!-- TODO: make 1 free fluffy card (see beatani website) -->
-                            <img src="assets/freefluffer.webp" class="w-full"
+                            <img src="assets/freefluffer.png" class="w-full"
                                 alt="Poorly drawn ticket, written '1 Free Fluffy'." width="5%">
                         </span>
                     </p>
