site: absolute socialshare image urls

--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,14 @@
     <meta property="og:url" content="https://fluffy.joshwel.co/">
     <meta property="og:title" content="fluffy!">
     <meta property="og:description" content="the best goddamn dog out there.">
-    <meta property="og:image" content="/assets/social.png">
+    <meta property="og:image" content="https://fluffy.joshwel.co/assets/socialshare.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://fluffy.joshwel.co/">
     <meta property="twitter:title" content="fluffy!">
     <meta property="twitter:description" content="the best goddamn dog out there.">
-    <meta property="twitter:image" content="/assets">
+    <meta property="twitter:image" content="https://fluffy.joshwel.co/assets/socialshare.webp">
 
     <link rel="stylesheet" href="/main.min.css">
 </head>
