site: update table text
(who is you?)

--- a/public/index.html
+++ b/public/index.html
@@ -178,7 +178,7 @@
                     <tr>
                         <td>loves you</td>
                         <td>✔️</td>
-                        <td><span class="smalltext">who knows?</span></td>
+                        <td><span class="smalltext">(who is you?)</span></td>
                     </tr>
                 </tbody>
             </table>
