site: temp a11y fix

--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
         <aside id="song">
             <p>here's a silly song for you to listen through as you scroll through:</p>
             <iframe id='player' width='200' height='200' src='https://vid.priv.au/embed/idUAXFGNVtw?t=4'
-                style='border:none;'></iframe>
+                title="Himiko Kikuchi - Fluffy" style='border:none;'></iframe>
         </aside>
 
         <!-- who? + gallery -->
@@ -82,37 +82,68 @@
                 </p>
             </div>
 
-            <div class="whogallery-image" id="galimg1"><img src="/assets/20230331_0.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_1.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_2.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_3.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_4.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_0.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_1.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_2.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_3.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_4.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_0.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_1.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_2.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_3.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_4.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_0.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_1.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_2.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_3.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_4.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_0.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_1.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_2.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_3.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_4.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_0.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_1.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_2.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_3.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_4.webp"></div>
-            <div class="whogallery-image"><img src="/assets/20230331_0.webp"></div>
+            <div class="whogallery-image" id="galimg1"><img src="/assets/20230331_0.webp"
+                    alt="image of fluffy on the 2023/03/31"></div>
+            <div class="whogallery-image"><img src="/assets/20230331_1.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_2.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_3.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_4.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_0.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_1.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_2.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_3.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_4.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_0.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_1.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_2.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_3.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_4.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_0.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_1.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_2.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_3.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_4.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_0.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_1.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_2.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_3.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_4.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_0.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_1.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_2.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_3.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_4.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
+            <div class="whogallery-image"><img src="/assets/20230331_0.webp" alt="image of fluffy on the 2023/03/31">
+            </div>
         </section>
 
         <!-- people fluffy has outlived -->
