site: lazy load iframe

--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
         <aside id="song">
             <p>here's a silly song for you to listen through as you scroll through:</p>
             <iframe id='player' width='200' height='200' src='https://vid.priv.au/embed/idUAXFGNVtw?t=4'
-                title="Himiko Kikuchi - Fluffy" style='border:none;'></iframe>
+                title="Himiko Kikuchi - Fluffy" style='border:none;' loading="lazy"></iframe>
         </aside>
 
         <!-- who? + gallery -->
